# journo-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
journo_bench/: .gitignore  README.md  __init__.py  dataset.py  evaluators.py  export.py  metrics.py  pricing.py  render.py  report_charts.py  run.py  scoring.py  synth_eval.py
journo_bench/adapters/: _task.py  base.py  chatgpt_search.py  claude_search.py  gemini_deep_research.py  gemini_grounded.py  linkup.py  openai_dr.py  perplexity.py  velora.py
journo_bench/cases/: 2026-04-iucn-emperor-penguin-endangered.yaml  2026-05-enlight-google-solar-ppa.yaml  2026-05-eso511-black-hole-rebrighten.yaml  2026-05-fda-hepcludex-hdv.yaml  2026-05-fipr-age-verification-evidence.yaml  2026-05-florijn-seville-capsize.yaml  2026-05-ivanka-albania-podcast.yaml  2026-05-td-bank-insider-plea.yaml  2026-05-vdp-as-mtb-worlds.yaml  2026-06-almeida-tour-out.yaml  2026-06-beckham-intra-launch.yaml  2026-06-boe-banknote-wildlife-vote.yaml  2026-06-cma-google-ai-publisher-optout.yaml  2026-06-cosine-lumen-sovereign.yaml  2026-06-deel-dlusd-stablecoin.yaml  2026-06-fca-climate-reporting.yaml  2026-06-guild-wars-3-reveal.yaml  2026-06-intesa-mps-offer.yaml  2026-06-iren-south-australia-datacenter.yaml  2026-06-korda-us-womens-open.yaml  2026-06-lululemon-outlook-cut.yaml  2026-06-naesen-giro-arensman-tactics.yaml  2026-06-ny-datacenter-moratorium.yaml  2026-06-openai-chatgpt-ads-uk.yaml  2026-06-physicsx-series-c.yaml  2026-06-quebec-pstq-draw.yaml  2026-06-ride-the-alps-sion.yaml  2026-06-romania-robor-cartel-fine.yaml  (+3 more)
(+10 files in other folders)
